# pkgupdater

./: README.md  pyproject.toml
src/: __init__.py  updater.py  version.py
src/version/: check_version.py  pypi.py
